k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-service
  namespace: sentiment-app
  labels:
    app: sentiment-application
spec:
  type: LoadBalancer
  selector:
    app: sentiment-application
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: metrics
      protocol: TCP
      port: 8081
      targetPort: 8081
